--- a/package.json
+++ b/package.json
@@ -53,6 +53,13 @@
   },
   "proxy": "http://localhost:4000",
   "devDependencies": {
-    "craco-alias": "^3.0.1"
+    "@faker-js/faker": "^8.4.1",
+    "craco-alias": "^3.0.1",
+    "msw": "^2.3.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
